global/global.css
details.ski-comp {
  border: 1px solid #aaa;
  border-radius: 4px;
  padding: 0.5em 0.5em 0;
}

details.ski-comp summary {
  font-weight: bold;
  margin: -0.5em -0.5em 0;
  padding: 0.5em;
}

details.ski-comp[open] {
  padding: 0.5em;
}

details.ski-comp[open] summary {
  border-bottom: 1px solid #aaa;
  margin-bottom: 0.5em;
}

div.ski-comp-sticky-top {
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  z-index: 98;
  background-color: white;
}

a.ski-sticky-link-handler::before { 
  display: block; 
  content: " "; 
  margin-top: -4.5rem; 
  height: 4.5rem; 
  visibility: hidden; 
  pointer-events: none;
}

